RESOLVED FIXED134776
REGRESSION(r167770): Cannot login in Evernote Safari extension
https://bugs.webkit.org/show_bug.cgi?id=134776
Summary REGRESSION(r167770): Cannot login in Evernote Safari extension
Ryosuke Niwa
Reported 2014-07-09 13:47:29 PDT
Turns out that NSWindowDidBecomeKeyNotification and NSWindowDidResignKeyNotification do not notify us when a popover becomes key so we need to keep using the SPI I removed.
Attachments
Partially reverts r167770 (1.81 KB, patch)
2014-07-09 13:54 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2014-07-09 13:54:52 PDT
Created attachment 234654 [details] Partially reverts r167770
WebKit Commit Bot
Comment 2 2014-07-09 14:36:38 PDT
Comment on attachment 234654 [details] Partially reverts r167770 Clearing flags on attachment: 234654 Committed r170931: <http://trac.webkit.org/changeset/170931>
WebKit Commit Bot
Comment 3 2014-07-09 14:36:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.