REGRESSION(r167770): Cannot login in Evernote Safari extension https://bugs.webkit.org/show_bug.cgi?id=134776

Reviewed by Enrica Casucci.

Unfortunately, NSWindowDidBecomeKeyNotification does not notify us when a popover becomes key
so we need to keep using the SPI (_windowChangedKeyState) I removed in r167770.

* WebView/WebView.mm:
(-[WebView _windowChangedKeyState]):


Canonical link: https://commits.webkit.org/152718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170931 268f45cc-cd09-0410-ab3c-d52691b4dbfc